<resources>
    <string name="app_name">SyncVision</string>
    <string name="imagine_create_share">Imagine. Create. Share</string>
    <string name="start_body">Where ideas transform into reality, connections flourish, and creativity knows no limits.</string>
    <string name="start_btn">Let`s get started!</string>
    <string name="login_str">Let`s get you Logged in!</string>
    <string name="login_text">Enter Information below</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="recover_password">Recover Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="let_s_register">Let`s Register</string>
    <string name="let_s_sign_in">Let`s Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="dark_mode_toggle">DARK_MODE_TOGGLE</string>
</resources>